# face-detection-cpp

./: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  Makefile  README.md  main.cpp
dockerfiles/: Dockerfile
model/: facedet.param
